--- a/src/Components/Collective/Meeting_Dashboard/MeetingDashboard.css
+++ b/src/Components/Collective/Meeting_Dashboard/MeetingDashboard.css
@@ -26,4 +26,5 @@
 .outer-container-meeting-card{
   border-radius: 6vh;  
   overflow: hidden;
+  width: 71vw;
 }
